--- a/CustomCrawler/CustomCrawlerDiff.xaml
+++ b/CustomCrawler/CustomCrawlerDiff.xaml
@@ -4,28 +4,96 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomCrawler"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Custom Crawler Diff" Height="450" Width="800">
-    
+        Title="Custom Crawler Diff" Height="547" Width="1459.838">
+
     <Grid Margin="8">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="URL1: " FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-        <TextBox x:Name="URL1Text" Grid.Row="0" Grid.Column="1" FontSize="15"/>
+        <Grid Grid.Column="0" Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
 
-        <TextBlock Margin="0 4 0 0" Grid.Row="1" Grid.Column="0" Text="URL2: " FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-        <TextBox x:Name="URL2Text" Margin="0 4 0 0" Grid.Row="1" Grid.Column="1" FontSize="15"/>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <Button Margin="8 0 0 0" Click="Button_Click" Grid.Row="0" Grid.Column="2" Grid.RowSpan="1" Content="Diff" Width="120"/>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="URL1: " FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+            <TextBox x:Name="URL1Text" Grid.Row="0" Grid.Column="1" FontSize="15"/>
 
+            <TextBlock Margin="0 4 0 0" Grid.Row="1" Grid.Column="0" Text="URL2: " FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+            <TextBox x:Name="URL2Text" Margin="0 4 0 0" Grid.Row="1" Grid.Column="1" FontSize="15"/>
+
+            <Button Margin="8 0 0 0" Click="Button_Click" Grid.Row="0" Grid.Column="2" Grid.RowSpan="1" Content="Diff" Width="120"/>
+
+            <Border Grid.Row="2" Grid.ColumnSpan="3" BorderThickness="1" BorderBrush="LightGray" Margin="0 8 0 0">
+                <ContentControl x:Name="browserContainer" Content="Browser goes here" Grid.Row="1"/>
+            </Border>
+        </Grid>
+
+        <GridSplitter Grid.Column="1" Margin="4 0 4 0"
+            ShowsPreview="True"
+            Width="2" Grid.Row="0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Stretch"/>
+
+        <Grid Grid.Column="2" Grid.Row="0">
+            <Grid.Resources>
+                <Style x:Key="TextBlockStyleKey" TargetType="{x:Type TextBlock}">
+                    <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+                    <Setter Property="Margin" Value="5 0 0 0" />
+                </Style>
+            </Grid.Resources>
+            <DataGrid x:Name="DiffList" ItemsSource="{Binding Items}" CanUserSortColumns="True" IsReadOnly="True" AutoGenerateColumns="False" SelectedCellsChanged="DiffList_SelectedCellsChanged"
+                  SelectionMode="Extended" SelectionUnit="FullRow" IsSynchronizedWithCurrentItem="True" BorderThickness="1" Background="White" Grid.Row="0"
+                  CanUserAddRows="False" materialDesign:DataGridAssist.CellPadding="4 2 2 2" materialDesign:DataGridAssist.ColumnHeaderPadding="4 2 2 2">
+                <DataGrid.Resources>
+                    <ResourceDictionary>
+                        <ResourceDictionary.MergedDictionaries>
+                            <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.DataGrid.xaml" />
+                            <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                            <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                        </ResourceDictionary.MergedDictionaries>
+                    </ResourceDictionary>
+                </DataGrid.Resources>
+                <DataGrid.Columns>
+                    <materialDesign:MaterialDataGridTextColumn Binding="{Binding Index}" Width="60" Header="Index" ElementStyle="{StaticResource TextBlockStyleKey}"
+                                                           EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}" SortDirection="Descending"/>
+                    <materialDesign:MaterialDataGridTextColumn Binding="{Binding Info}" Width="300" Header="Info" ElementStyle="{StaticResource TextBlockStyleKey}"
+                                                           EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}"/>
+                </DataGrid.Columns>
+                <DataGrid.CellStyle>
+                    <Style TargetType="DataGridCell">
+                        <Setter Property="Height" Value="25"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="BorderThickness" Value="0" />
+                                <Setter Property="Background" Value="Gray"/>
+                                <Setter Property="VerticalAlignment" Value="Center"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </DataGrid.CellStyle>
+            </DataGrid>
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.ColumnSpan="2">
+            
+        </Grid>
     </Grid>
 </Window>
