--- a/CustomCrawler/CustomCrawlerCluster.xaml
+++ b/CustomCrawler/CustomCrawlerCluster.xaml
@@ -30,6 +30,7 @@
         <Grid Grid.Column="0" Margin="0 0 4 0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="2*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
@@ -82,6 +83,19 @@
                     </Style>
                 </DataGrid.CellStyle>
             </DataGrid>
+
+            <Border BorderThickness="1" Margin="0 8 0 0" BorderBrush="LightGray" Grid.Row="2" Grid.ColumnSpan="3">
+
+                <Grid Grid.Column="0" Margin="4">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Text="Attr: " Grid.Column="0" Margin="0 4 0 0" FontSize="15" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+                    <TextBox x:Name="Attributes" Grid.Row="1" Grid.Column="1" Margin="0 4 0 0" FontSize="15" AcceptsReturn="True" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Auto"/>
+                </Grid>
+            </Border>
 
             <TextBlock Grid.Column="0" Grid.Row="3" Text="FILTER: " FontSize="15" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0 4 0 0"/>
             <TextBox x:Name="Filter" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" Margin="0 4 0 0" TextChanged="Filter_TextChanged"/>
