--- a/CustomCrawler/ScriptViewer.xaml
+++ b/CustomCrawler/ScriptViewer.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Margin="0 0 0 4">
-            <CheckBox Content="Beautify" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
+            <CheckBox x:Name="Beautify" Content="Beautify" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
         </StackPanel>
         <StackPanel Margin="0 0 0 4" HorizontalAlignment="Right">
             <TextBlock x:Name="LC"/>
